src/test/deca/context/valid/pierre/objects/callProtectedSuper.deca
class A {
    protected int a;
}
class B extends A {
    void test() {
        A a = new A();
        this.a = a.a;
    }
}
{}