src/test/deca/context/invalid/pierre/objects/paramClassInsteadType.deca
class A {
    int a;
    void method(int i){}
}
{
    A a = new A();
    a.method(a);
}